# neural-network

./: .gitignore  README.md  main.py  pyproject.toml
neural_network/: activation_functions.py  dataset.py  layer.py  main.py  neural_network.py
tests/: test_dataset.py  test_layer.py
