[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["Kuba Podkomórka <jpodkomorka19@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
app = 'main:main'

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
